Add hiscore CSV edge case fixtures